--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
 img {
     display: block;
     max-width: 100%;
+    height: auto;
 }
 /*Reserts*/
 ul, 
@@ -44,9 +45,11 @@ button {
     font-family: inherit;
     cursor: pointer;
 }
-
+.
 /* Base styles */
-.section {}
+.section {
+
+}
 
 .title {
 }
@@ -67,6 +70,7 @@ button {
     text-transform: capitalize;
     text-align: center;
     color: var(--main-dark-cl);
+    margin-bottom: 72px;
 }
 .container {
     width: 1158px;
@@ -96,13 +100,18 @@ button {
 .header {
     letter-spacing: 0.02em;
     color: var(--main-dark-cl);
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 .header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.header-item {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+.header-link {
+    
 }
 .header-nav {
     display: flex;
@@ -181,6 +190,9 @@ button {
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--accent-cl);
+    width: 496px;
+    padding-bottom: 48px;
+    margin: 0 auto;
 }
 
 .hero-btn {
@@ -190,6 +202,13 @@ button {
     color: var(--accent-cl);
     background-color: var(--blue-accent-cl);
     letter-spacing: 0.04em;
+    min-width: 169px;
+    min-height: 56px;
+    display: flex;
+    margin: 0 auto;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 16px 32px;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -204,9 +223,21 @@ button {
     padding-top: 60px;
 }
 
-.section-advantages-list {}
+.section-advantages {
+    display: flex;
+}
+.section-advantages-list {
+    display: flex;
+    width: 264px;
+    justify-content: space-between;
+    gap: 24px;
+}
 
-.section-advantages-item {}
+.section-advantages-item {
+    padding: 8px;
+    
+}
+    
 
 .section-advantages-subtitle {}
 
@@ -223,13 +254,18 @@ padding-top: 60px;
 padding-bottom: 120px;
 }
 
-.section-doing-title {}
+.section-doing-title {
+    margin-bottom: 72px;
+}
 
-.section-doing-list {}
-
-.section-doing-item {}
+.section-doing-list {
+    display: flex;
+    justify-content: space-between;
+}
 
 .section-doing-img {}
+
+
 
 /*Our team section*/
 .section {}
@@ -237,13 +273,18 @@ padding-bottom: 120px;
 .team { 
     background-color: var(--main-light-cl) ;
     padding-top: 120px;
-    padding-left: 120px;
 }
 
 .section-team-title {}
 
-.section-team-list {}
+.section-team-list {
+    display: flex;
+    margin-bottom: 120px;
+    justify-content: space-between;
+}
+.section-team-list .subtitle {
 
+}
 .section-team-item {
     background: var(--accent-cl);
 }
@@ -255,8 +296,11 @@ padding-bottom: 120px;
 .section-team-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
 }
-
+.section-team-item .subtitle {
+    text-align: center;
+}
 /*Footer section*/
 .footer {
     background: var(--main-dark-cl);
@@ -267,6 +311,8 @@ padding-bottom: 120px;
 .footer-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
+    margin-top: 17.5px;
 }
 
 /*Portfolio*/
@@ -303,4 +349,9 @@ letter-spacing: 0.02em;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--main-dark-cl);
+}
+.portfolio-list {
+    display: flex;
+    min-width: 586px;
+    
 }
