--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,19 @@
 *::after {
     box-sizing: border-box;
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 /* Common styles */
 body {
     font-family: "Roboto", sans-serif;
@@ -78,7 +91,6 @@ button {
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 1px solid red;
 }
     /* Logo styles */
 .logo {
@@ -105,6 +117,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid var(--border-cl);
 }
 .header-item {
     padding-top: 24px;
@@ -320,10 +333,15 @@ padding-bottom: 120px;
     color: var(--blue-accent-cl);
     background-color: var(--main-light-cl);
     border: 1px solid var(--border-cl);
+    border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
+    width: 116px;
+    height: 48px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    padding: 12px, 24px, 12px, 24px;
+   
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -331,7 +349,7 @@ padding-bottom: 120px;
     background-color: var(--BLUE-accent-cl);
 }
 .portfolio-text {
-    color: var(--main-dark-accent);
+color: var(--main-dark-accent);
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -353,5 +371,33 @@ letter-spacing: 0.02em;
 .portfolio-list {
     display: flex;
     min-width: 586px;
-    
+    gap: 24px;
+    justify-content: center;
+    padding-top: 96px;
+    padding-bottom: 72px;
+}
+
+.portfolio-main.list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 90px;
+    padding-bottom: 120px;
+
+}
+.prtfolio-main-item:last-child {
+    margin-right: 0;
+}
+.portfolio-item { 
+    width: 360px;
+    height: 420px;
+}
+
+.portfolio-main.link {
+}
+.portfolio-container {
+    border: 1px solid var(--border-cl);
+    border-top: none;
+    padding-top: 32px ;
+    padding-bottom: 32px;
 }
