--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,12 @@ padding-bottom: 120px;
 }
 .section-team-item .subtitle {
     text-align: center;
+    margin-bottom: 8px;
 }
+.expert {
+    padding: 32px 16px;
+}
+
 /*Footer section*/
 .footer {
     background: var(--main-dark-cl);
@@ -334,7 +339,7 @@ padding-bottom: 120px;
     width: 264px;
     margin-top: 17.5px;
 }
-.footer.logo {
+.footer.footer.link-logo {
     display: inline-block;
     margin-bottom: 16px;
 }
