--- a/css/styles.css
+++ b/css/styles.css
@@ -227,18 +227,16 @@ button {
 /* Advantages section*/
 .section {}
 
-.section-advantages {
-    display: flex;
+.section.advantages {
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.section-advantages .list {
+.section-advantages.list {
     display: flex;
-    width: 264px;
+    width: 1128px;
     justify-content: space-between;
     gap: 24px;
 }
-
 .section-advantages-item {
     padding: 8px;
     width calc((100% - 3 * 24px) / 4);
@@ -246,11 +244,9 @@ button {
 .section-advantages-item:last-child {
     margin-right: 0;
 }   
-
 .section-advantages-subtitle {
     margin-bottom: 8px;
 }
-
 .section-advantages-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
