--- a/css/styles.css
+++ b/css/styles.css
@@ -283,17 +283,21 @@ padding-bottom: 120px;
     background-color: var(--main-light-cl) ;
     padding-top: 120px;
 }
-
+.section.team {
+    padding: 120px 0;
+}
 .section-team-title {}
 
 .section-team-list {
     display: flex;
     margin-bottom: 120px;
     justify-content: space-between;
+    gap: 24px;
 }
-.section-team-list .subtitle {
+.section-team-list:last-child {
+    margin-right: 0;
+}
 
-}
 .section-team-item {
     background: var(--accent-cl);
     border-radius: 0px 0px 4px 4px;
@@ -347,7 +351,7 @@ padding-bottom: 120px;
     border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
-    width: 116px;
+    min-width: 116px;
     height: 48px;
     line-height: 1.5;
     letter-spacing: 0.04em;
