--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@
     margin: -1px;
     border: 0;
     padding: 0;
-
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -225,10 +224,6 @@ button {
 }
 
 /* Advantages section*/
-.visually-hidden{
-    margin-bottom: 8px;
-}
-
 .section.advantages {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -246,7 +241,7 @@ button {
 .section-advantages-item:last-child {
     margin-right: 0;
 }   
-.section-advantages-subtitle {
+.section-advantages.subtitle {
     margin-bottom: 8px;
 }
 .section-advantages-text {
