--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ button {
 .section-advantages-item:last-child {
     margin-right: 0;
 }   
-.section-advantages-item .subtitle {
+.advantages-subtitle {
     margin-bottom: 8px;
 }
 .section-advantages-text {
