--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+
 /* Common styles */
 body {
     font-family: "Roboto", sans-serif;
@@ -44,7 +45,7 @@ ol {
     padding: 0;
     margin: 0;
 }
-h1, h2, h3, h4, h5 p {
+h1, h2, h3, h4, h5, p {
 margin: 0;
 padding: 0;
 }
@@ -117,12 +118,12 @@ button {
     justify-content: space-between;
 
 }
-.header-item {
-    padding-top: 24px;
-    padding-bottom: 24px;
+.header-item { 
 }
 .header-link {
-    
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .header-nav {
     display: flex;
@@ -198,7 +199,6 @@ button {
     text-align: center;
     color: var(--accent-cl);
     max-width: 496px;
-    padding-bottom: 48px;
     margin: 0 auto;
 }
 
@@ -217,6 +217,7 @@ button {
     border-radius: 4px;
     padding: 16px 32px;
     border: none;
+    margin-top: 48px;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -242,11 +243,12 @@ button {
     margin-right: 0;
 }   
 .advantages-subtitle {
-    margin-bottom: 8px;
 }
 .section-advantages-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin: 0;
+    padding-top: 8px;
 }
 
 /*What are we doing section*/
@@ -288,9 +290,9 @@ padding-bottom: 120px;
 .section-team-list {
     display: flex;
     margin-bottom: 120px;
-    justify-content: space-between;
     gap: 24px;
 }
+
 .section-team-list:last-child {
     margin-right: 0;
 }
@@ -298,7 +300,7 @@ padding-bottom: 120px;
 .section-team-item {
     background: var(--accent-cl);
     border-radius: 0px 0px 4px 4px;
-    
+    width: calc((100% - 3 * 24px) / 4);
 }
 
 .section-team-img {}
@@ -330,7 +332,7 @@ padding-bottom: 120px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
-    margin-top: 17.5px;
+    margin-top: 16px;
 }
 .footer .logo {
     display: inline-block;
@@ -398,8 +400,9 @@ letter-spacing: 0.02em;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-
-
+}
+.portfolio-main-item {
+    width: calc((100% - 2 * 24) / 3);
 }
 .prtfolio-main-item:last-child {
     margin-right: 0;
@@ -410,10 +413,12 @@ letter-spacing: 0.02em;
 }
 
 .portfolio-main.link {
+    display: flex;
+    flex-direction: column;
 }
 .portfolio-container {
     border: 1px solid var(--border-cl);
     border-top: none;
     padding: 32px 16px;
-
+    flex-grow: 1;
 }
