--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,7 @@ button {
     margin-right: 0;
 }   
 .advantages-subtitle {
+    margin-bottom: 8px;
 }
 .section-advantages-text {
     line-height: 1.5;
